Fix test failures in tst_qvideowidget and tst_qgraphicsvideoitem
This passes now, but might require some more massaging to get
correct display rects for the widget case.

Change-Id: I4673240bb1afacfe714580e586e293c09f690d11
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/tests/auto/unit/multimediawidgets/qvideowidget/CMakeLists.txt
+++ b/tests/auto/unit/multimediawidgets/qvideowidget/CMakeLists.txt
@@ -7,9 +7,12 @@
 qt_add_test(tst_qvideowidget
     SOURCES
         tst_qvideowidget.cpp
+    INCLUDE_DIRECTORIES
+        ../../mockbackend
     PUBLIC_LIBRARIES
         Qt::Gui
         Qt::MultimediaPrivate
         Qt::MultimediaWidgetsPrivate
         Qt::Widgets
+        QtMultimediaMockBackend
 )
