Have QPlatformMediaIntegration create the platform encoder
Follow QPlatformCamera and QPlatformCameraImageCapture and create the
QPlatformMediaEncoder from the platform integration instead of the
capture session.
Adjust the mock backend and tests accordingly.

Change-Id: I494172508006cce2d6d07cf733bf070e6ade8ae3
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -379,7 +379,7 @@ qt_internal_extend_target(Multimedia CONDITION APPLE AND NOT WATCHOS
         platform/darwin/avfvideobuffer.mm platform/darwin/avfvideobuffer_p.h
         platform/darwin/qdarwindevicemanager.mm platform/darwin/qdarwindevicemanager_p.h
         platform/darwin/qdarwinformatsinfo.mm platform/darwin/qdarwinformatsinfo_p.h
-        platform/darwin/qdarwinintegration.cpp platform/darwin/qdarwinintegration_p.h
+        platform/darwin/qdarwinintegration.mm platform/darwin/qdarwinintegration_p.h
     PUBLIC_LIBRARIES
         ${FWAudioToolbox}
         ${FWCoreAudio}
