CMake: use correct target
Ammend 8314e7216e9f1312bf4294c94977ba75d19b9e9d with correct CMake target.

Change-Id: I3b155edce2574683e456e2587c56f62275f8b0c1
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/spectrum/3rdparty/fftreal/CMakeLists.txt
+++ b/examples/multimedia/spectrum/3rdparty/fftreal/CMakeLists.txt
@@ -64,7 +64,7 @@ endif()
 
 set(INSTALL_EXAMPLEDIR "${INSTALL_EXAMPLESDIR}/multimedia/spectrum")
 
-install(TARGETS spectrum
+install(TARGETS fftreal
     RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
     BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
     LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
