Android: Get audio Input/Output list
Get a real audio input/output devices list using new
QtAudioDeviceManager class.

Set correct device destription for QOpenSLESDeviceInfo class.

Change-Id: I8829fb47a5cfaacf2c45f1cd4853f4c551a81720
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/android/jar/CMakeLists.txt
+++ b/src/android/jar/CMakeLists.txt
@@ -3,6 +3,7 @@
 set(java_sources
     src/org/qtproject/qt/android/multimedia/QtAndroidMediaPlayer.java
     src/org/qtproject/qt/android/multimedia/QtCameraListener.java
+    src/org/qtproject/qt/android/multimedia/QtAudioDeviceManager.java
     src/org/qtproject/qt/android/multimedia/QtMediaRecorderListener.java
     src/org/qtproject/qt/android/multimedia/QtMultimediaUtils.java
     src/org/qtproject/qt/android/multimedia/QtSurfaceHolderCallback.java
