--- a/tests/auto/unit/mockbackend/CMakeLists.txt
+++ b/tests/auto/unit/mockbackend/CMakeLists.txt
@@ -23,8 +23,8 @@ target_sources(QtMultimediaMockBackend INTERFACE
     qmockmediaencoder.h
     qmockmediacapturesession.h
     qmockvideosink.h
-    qmockdevicemanager.cpp
-    qmockdevicemanager_p.h
+    qmockmediadevices.cpp
+    qmockmediadevices_p.h
     qmockintegration.cpp
     qmockintegration_p.h
 )
