Clean up QAudioBuffer API and implementation
And tidy up the docs a bit as well.

QAudioBuffer can really be just a class that contains a
QByteArray for the data, a QAudioFormat and the time stamp.
The QAbstractAudioBuffer design was never used and is overkill
for audio data anyway, as we can afford to copy that once.

Change-Id: I4e1e580db6ecd32b8e92e251f145ab3b851b1bd1
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -15,7 +15,7 @@ qt_internal_add_module(Multimedia
     PLUGIN_TYPES video/gstvideorenderer video/videonode
     SOURCES
         audio/qaudio.cpp audio/qaudio.h
-        audio/qaudiobuffer.cpp audio/qaudiobuffer.h audio/qaudiobuffer_p.h
+        audio/qaudiobuffer.cpp audio/qaudiobuffer.h
         audio/qaudiodecoder.cpp audio/qaudiodecoder.h
         audio/qaudiodeviceinfo.cpp audio/qaudiodeviceinfo.h audio/qaudiodeviceinfo_p.h
         audio/qaudioformat.cpp audio/qaudioformat.h
