Add audio plugin for QtMutimedia on WASM
Currently there's no audio support for WASM in QtMultimedia, this adds
a plugin with output and input capabilities using emscripten's OpenAL
implementation.

Task-number: QTBUG-69444
Pick-to: 6.2
Change-Id: Ib959c041ab1864d47a070e2c98e5208214aa373c
Reviewed-by: Lorn Potter <lorn.potter@gmail.com>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -326,6 +326,17 @@ qt_internal_extend_target(Multimedia CONDITION ANDROID
         mediandk
 )
 
+qt_internal_extend_target(Multimedia CONDITION WASM
+    SOURCES
+        platform/wasm/qwasmmediaintegration.cpp platform/wasm/qwasmmediaintegration_p.h
+        platform/wasm/qwasmmediadevices.cpp platform/wasm/qwasmmediadevices_p.h
+        platform/wasm/audio/qwasmaudiosource.cpp platform/wasm/audio/qwasmaudiosource_p.h
+        platform/wasm/audio/qwasmaudiosink.cpp platform/wasm/audio/qwasmaudiosink_p.h
+        platform/wasm/audio/qwasmaudiodevice.cpp platform/wasm/audio/qwasmaudiodevice_p.h
+    PUBLIC_LIBRARIES
+        openal
+)
+
 qt_internal_extend_target(Multimedia CONDITION WIN32
     LIBRARIES
         gdi32
