Add video encoding to Windows backend
Adds support for recording video from cameras through
QWindowsMediaEncoder, etc.

Change-Id: I75b6e651b1b5bbd02a3b588e8a811be799fd0b9e
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -175,6 +175,8 @@ qt_internal_extend_target(Multimedia CONDITION WIN32
         platform/windows/mediacapture/qwindowsmediaencoder.cpp
         platform/windows/mediacapture/qwindowsmediaencoder_p.h
         platform/windows/qwindowsmediadevices.cpp platform/windows/qwindowsmediadevices_p.h
+        platform/windows/mediacapture/qwindowsstoragelocation.cpp
+        platform/windows/mediacapture/qwindowsstoragelocation_p.h
         platform/windows/qwindowsformatinfo.cpp platform/windows/qwindowsformatinfo_p.h
         platform/windows/qwindowsintegration.cpp platform/windows/qwindowsintegration_p.h
         platform/windows/sourceresolver.cpp platform/windows/sourceresolver_p.h
