CMake: remove GStreamer::Gl from public dependencies
Users of Qt MM don't need to link agaist GStreamer::Gl, fixes build issue:
  Target "videowidget" links to target "GStreamer::Gl" but the target was not
  found.  Perhaps a find_package() call is missing for an IMPORTED target, or
  an ALIAS target is missing?

Change-Id: I41788b4ea8540c55f1657411a911f24af4a7a7a8
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -259,7 +259,7 @@ qt_internal_extend_target(Multimedia CONDITION QT_FEATURE_gstreamer AND QT_FEATU
 )
 
 qt_internal_extend_target(Multimedia CONDITION QT_FEATURE_gstreamer AND QT_FEATURE_gstreamer_gl
-    PUBLIC_LIBRARIES
+    LIBRARIES
         GStreamer::Gl # special case
 )
 
