Don't compile/test the module for the moment
This is required, so that we can enable the module in qt5.git.
Once that's done we can work our way back to full testing using
this file only.

Change-Id: I98ed1e0bd12056e32826d5896f2e5c8c1eda0452
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/coin/module_config.yaml
+++ b/coin/module_config.yaml
@@ -5,8 +5,6 @@ accept_configuration:
   not_contains_value: Disable
 
 instructions:
-  Build:
-    - !include "{{qt/qtbase}}/coin_module_build_template_v2.yaml"
+  Build: []
 
-  Test:
-    - !include "{{qt/qtbase}}/coin_module_test_template_v3.yaml"
+  Test: []
