--- a/src/multimediawidgets/CMakeLists.txt
+++ b/src/multimediawidgets/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## MultimediaWidgets Module:
 #####################################################################
 
-qt_add_module(MultimediaWidgets
+qt_internal_add_module(MultimediaWidgets
     SOURCES
         qtmultimediawidgetdefs.h
         qvideowidget.cpp qvideowidget.h qvideowidget_p.h
@@ -24,14 +24,14 @@ qt_add_module(MultimediaWidgets
 ## Scopes:
 #####################################################################
 
-qt_extend_target(MultimediaWidgets CONDITION TARGET Qt::OpenGL
+qt_internal_extend_target(MultimediaWidgets CONDITION TARGET Qt::OpenGL
     LIBRARIES
         Qt::OpenGL
     PUBLIC_LIBRARIES
         Qt::OpenGLWidgets
 )
 
-qt_extend_target(MultimediaWidgets CONDITION QT_FEATURE_graphicsview
+qt_internal_extend_target(MultimediaWidgets CONDITION QT_FEATURE_graphicsview
     SOURCES
         qgraphicsvideoitem.cpp qgraphicsvideoitem.h
 )
