--- a/tests/auto/integration/qaudiodecoderbackend/CMakeLists.txt
+++ b/tests/auto/integration/qaudiodecoderbackend/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB_RECURSE test_data_glob
     testdata/*)
 list(APPEND test_data ${test_data_glob})
 
-qt_add_test(tst_qaudiodecoderbackend
+qt_internal_add_test(tst_qaudiodecoderbackend
     SOURCES
         ../shared/mediafileselector.h
         tst_qaudiodecoderbackend.cpp
@@ -26,7 +26,7 @@ qt_add_test(tst_qaudiodecoderbackend
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_qaudiodecoderbackend CONDITION boot2qt
+qt_internal_extend_target(tst_qaudiodecoderbackend CONDITION boot2qt
     DEFINES
         WAV_SUPPORT_NOT_FORCED
 )
