--- a/tests/auto/unit/multimedia/qabstractvideobuffer/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/qabstractvideobuffer/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_qabstractvideobuffer Test:
 #####################################################################
 
-qt_add_test(tst_qabstractvideobuffer
+qt_internal_add_test(tst_qabstractvideobuffer
     SOURCES
         tst_qabstractvideobuffer.cpp
     PUBLIC_LIBRARIES
