--- a/tests/auto/unit/multimedia/qaudioformat/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/qaudioformat/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_qaudioformat Test:
 #####################################################################
 
-qt_add_test(tst_qaudioformat
+qt_internal_add_test(tst_qaudioformat
     SOURCES
         tst_qaudioformat.cpp
     PUBLIC_LIBRARIES
