--- a/tests/auto/unit/multimedia/qaudionamespace/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/qaudionamespace/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_qaudionamespace Test:
 #####################################################################
 
-qt_add_test(tst_qaudionamespace
+qt_internal_add_test(tst_qaudionamespace
     SOURCES
         tst_qaudionamespace.cpp
     PUBLIC_LIBRARIES
