--- a/tests/auto/unit/multimedia/qmediaplayer/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/qmediaplayer/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_qmediaplayer Test:
 #####################################################################
 
-qt_add_test(tst_qmediaplayer
+qt_internal_add_test(tst_qmediaplayer
     SOURCES
         tst_qmediaplayer.cpp
     INCLUDE_DIRECTORIES
@@ -22,7 +22,7 @@ set(testdata_resource_files
     "testdata/nokia-tune.mp3"
 )
 
-qt_add_resource(tst_qmediaplayer "testdata"
+qt_internal_add_resource(tst_qmediaplayer "testdata"
     PREFIX
         "/"
     FILES
