--- a/tests/auto/unit/multimedia/qmediatimerange/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/qmediatimerange/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_qmediatimerange Test:
 #####################################################################
 
-qt_add_test(tst_qmediatimerange
+qt_internal_add_test(tst_qmediatimerange
     SOURCES
         tst_qmediatimerange.cpp
     PUBLIC_LIBRARIES
