--- a/tests/auto/unit/multimediawidgets/qvideowidget/CMakeLists.txt
+++ b/tests/auto/unit/multimediawidgets/qvideowidget/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_qvideowidget Test:
 #####################################################################
 
-qt_add_test(tst_qvideowidget
+qt_internal_add_test(tst_qvideowidget
     SOURCES
         tst_qvideowidget.cpp
     INCLUDE_DIRECTORIES
