--- a/tests/auto/integration/qaudiooutput/CMakeLists.txt
+++ b/tests/auto/integration/qaudiooutput/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_qaudiooutput Test:
 #####################################################################
 
-qt_add_test(tst_qaudiooutput
+qt_internal_add_test(tst_qaudiooutput
     SOURCES
         tst_qaudiooutput.cpp
     PUBLIC_LIBRARIES
