--- a/tests/auto/unit/multimedia/qsamplecache/CMakeLists.txt
+++ b/tests/auto/unit/multimedia/qsamplecache/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB_RECURSE test_data_glob
     testdata/*)
 list(APPEND test_data ${test_data_glob})
 
-qt_add_test(tst_qsamplecache
+qt_internal_add_test(tst_qsamplecache
     SOURCES
         tst_qsamplecache.cpp
     PUBLIC_LIBRARIES
