--- a/tests/auto/unit/multimediawidgets/qcamerawidgets/CMakeLists.txt
+++ b/tests/auto/unit/multimediawidgets/qcamerawidgets/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## tst_qcamerawidgets Test:
 #####################################################################
 
-qt_add_test(tst_qcamerawidgets
+qt_internal_add_test(tst_qcamerawidgets
     SOURCES
         tst_qcamerawidgets.cpp
     INCLUDE_DIRECTORIES
