--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -1,7 +1,10 @@
 dependencies:
   ../qtbase:
-    ref: 66c94b83565d2db79307124b6cd797da33a5a7ef
+    ref: 4b60cea6020c99dabb3b2777e30f0a3924dcd8a7
     required: true
+  ../qtshadertools:
+    ref: 8ed634c95e2fa84e0eeca7c221539fb901dca476
+    required: false
   ../qtdeclarative:
-    ref: 675551f50c567a32e14b0af925d628d72fe2f250
+    ref: 3c0a13c582a42d2a3e012dd78005f0767ee4428c
     required: false
