Enable compilation of the Qt Multimedia module in CI
And fix a couple of smaller issues found by CI.

Add some hacks/workarounds for issues with gstreamer
packages and packageconfig files.

Disable compilation of the QNX backend (as it's broken
currently), and use the wnf and wmsdk feature tests
to determine whether to compile the windows backend.

Change-Id: I12f8983132f50b337cb15eb473d87299d3259745
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>

--- a/coin/module_config.yaml
+++ b/coin/module_config.yaml
@@ -5,6 +5,7 @@ accept_configuration:
   not_contains_value: Disable
 
 instructions:
-  Build: []
+  Build:
+    - !include "{{qt/qtbase}}/coin_module_build_template_v2.yaml"
 
   Test: []
